--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,25 @@
     <title>Tapir Grocer</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <title>Tapir Grocer</title>
+    <meta name="title" content="Tapir Grocer">
+    <meta name="description" content="Tapir Grocer">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="Tapir Grocer">
+    <meta property="og:title" content="Tapir Grocer">
+    <meta property="og:description" content="Tapir Grocer">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="Tapir Grocer">
+    <meta property="twitter:title" content="Tapir Grocer">
+    <meta name="twitter:site" content="@TapirGrocer" />
+    <link rel="shortcut icon" href="https://res.cloudinary.com/tahmid-rahman/image/upload/v1606639852/Asset_2_njtgnl.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">      
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
