--- a/app/views/sign_ups/new.html.erb
+++ b/app/views/sign_ups/new.html.erb
@@ -2,7 +2,7 @@
     <div class="column is-one-third">
         <div class="card">
             <div class="card-content">
-                <h1 class = "is-size-1 has-text-weight-bold mb-3">Sign up</h1>
+                <h1 class = "is-size-1 has-text-weight-bold mb-3">Sign Up</h1>
             </div>
         </div>
         <%= render 'form', sign_up: @sign_up %>
