--- a/app/views/link/index.html.erb
+++ b/app/views/link/index.html.erb
@@ -2,7 +2,7 @@
     <div class ="column is-one-third">
         <div class="card">
             <header class="card-header">
-                <h1 class = "is-size-2 has-text-weight-bold">Customer Check-in</h1>
+                <h1 class = "is-size-2 has-text-weight-bold ml-3">Customer Check-in</h1>
             </header>
             <div class="card-content">
                 <%= raw @qr.as_html %>
