--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="columns mt-6 is-centered">
+<div class="columns mt-6 is-centered is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
   <% @entries.each do |entry| %>
     <div class ="column is-one-quarter">
       <div class="card">
