--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,8 +1,8 @@
 <div class="columns is-centered mt-6">   
     <div class="column is-one-third">
         <div class="card">
-           <header class="card-header">
-                <h1 class = "is-size-2 has-text-weight-bold has-text-centered">Check-in</h1>
+           <header class="card-content">
+                <h1 class = "is-size-1 has-text-weight-bold mb-1">Check-in</h1>
             </header>
         </div>
         <%= render 'form', entry: @entry %>
